show case nara in docs website

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -2,17 +2,21 @@
 title: nara
 ---
 
+import NaraAvatarShowcase from '../../components/NaraAvatarShowcase.astro';
+
 
 nara is a distributed myth about machines that gossip, remember, and build opinions.
 it's a network of tiny agents with personality, carrying a **collective hazy memory** where no one has the whole story, but the story still survives.
 
-you can [see it live](https://nara.network) ([backup/debug site](https://global-nara.eljojo.net))
+you can [see it live on nara.network](https://nara.network)
 
 ---
 
 ## the vibe
 
 a nara is a little creature with a soul, a name, and a temperament. it wakes up, listens to the world, makes feelings about what it hears, and passes those feelings along. it's stateful but not persistent. it's a tamagotchi with a social life.
+
+<NaraAvatarShowcase />
 
 the network is built on the idea that **events are the truth**, and **opinions are a personality-shaped shadow of that truth**.
 
@@ -97,6 +101,10 @@ every nara emits an **aura**: a primary and secondary color derived from soul + 
 ## avatar (the silhouette)
 
 the web ui renders a **nara avatar**: a soft, foggy silhouette generated deterministically from the nara's ID. the shape never changes (identity), while motion softness and color shift with personality and aura. no faces, no eyes, just presence in the mist.
+
+here are a few sample naras:
+
+<NaraAvatarShowcase />
 
 ---
 
